--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,6 +136,7 @@ jobs:
         path: |
           'open-typer'
           *.AppImage
+          *.zsync
     # MacOS
     - if: contains(matrix.os, 'macos')
       uses: actions/upload-artifact@v2
@@ -226,7 +227,7 @@ jobs:
     - name: Create release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "build-windows/*.exe,build-ubuntu/*.AppImage,*.deb"
+        artifacts: "build-windows/*.exe,build-ubuntu/*.AppImage,build-ubuntu/*.zsync,*.deb"
         name: "Open-Typer ${{ github.ref_name }}"
         owner: ${{ github.event.pusher.name }}
         draft: true
